--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,4 +4,4 @@ services:
       context: .
       dockerfile: Docker/prod/Dockerfile
     ports:
-      - "1234:8000"
+      - "${APP_PORT:-80}:8000"
