--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,5 +3,6 @@ services:
     build:
       context: .
       dockerfile: Docker/prod/Dockerfile
+    restart: unless-stopped
     ports:
       - "${APP_PORT:-80}:8000"
