--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DD_TRACE_ENABLED=true
+DD_SERVICE=laravel-app
+DD_ENV=production
+DD_AGENT_HOST=127.0.0.1  # Altere para o IP apropriado se necessário
