--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "datadog/dd-trace": "^0.99.1",
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/octane": "^2.3",
