--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/octane": "^2.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "monolog/monolog": "^3.6",
         "predis/predis": "^2.2"
     },
     "require-dev": {
